不同用户的定制主页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
         <item>Function3</item>
     </string-array>
     <string name="title_activity_entry">EntryActivity</string>
+    <string name="title_activity_student">StudentActivity</string>
 </resources>
