--- a/SEP/app/src/main/res/values/strings.xml
+++ b/SEP/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_userlist">userlist</string>
     <string name="title_activity_manage_class">ManageClass</string>
+    <string name="title_activity_announcement">announcement</string>
 </resources>
